<resources>
    <string name="app_name">Antheia plant manager</string>
    <string name="welcome_to_antheia">Welcome\nto\nAntheia</string>
    <string name="wrong_user_details_error">Password or email is incorrect</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_without_an_account">Continue without an account</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_occurred_while_signing_in">Error occurred while signing in, please try again</string>
    <string name="empty_credentials_error">Please enter your email and password</string>
    <string name="create_an_account">Create an account</string>
    <string name="google_sign_in_cancelled">Google sign in cancelled</string>
    <string name="password_requirements_error">Password must be at least 8 characters \ncontain at least one uppercase letter \none lowercase letter \none number \none special character</string>
    <string name="passwords_do_not_match_error">Passwords do not match</string>
    <string name="create_account_empty_field_error">Please fill out all fields</string>
    <string name="create_account_invalid_email_error">Please enter a valid email</string>
    <string name="plant_name">Plant name</string>
    <string name="location">Location</string>
    <string name="watering_frequency">Watering frequency</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="repotting_frequency">Repotting frequency</string>
    <string name="fertilizing_frequency">Fertilizing frequency</string>
    <string name="water_frequency_dropdown">Water frequency dropdown</string>
    <string name="repotting_frequency_dropdown">Repotting frequency dropdown</string>
    <string name="fertilizing_frequency_dropdown">Fertilizing frequency dropdown</string>
    <string name="select_watering_frequency">Select watering frequency</string>
    <string name="every_day">day</string>
    <string name="every_2_days">2 days</string>
    <string name="every_3_days">3 days</string>
    <string name="every_week">week</string>
    <string name="every_2_weeks">2 weeks</string>
    <string name="every_3_weeks">3 weeks</string>
    <string name="every_month">month</string>
    <string name="every_6_months">6 months</string>
    <string name="every_year">year</string>
    <string name="every_2_years">2 years</string>
    <string name="every_4_years">4 years</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="exit_form">Exit form</string>
    <string name="home">Home</string>
    <string name="notifications">notifications</string>
    <string name="notifications_header">Notifications</string>
    <string name="no_plants_found_would_you_like_to_add_some">No plants found.\n Would you like to add some?</string>
    <string name="add_plant">Add plant</string>
    <string name="no_reminder_set">No reminder set</string>
    <string name="no_water_needed">No water needed</string>
    <string name="water_needed">Water needed</string>
    <string name="no_repotting_needed">No repotting needed</string>
    <string name="repotting_needed">Repotting needed</string>
    <string name="no_fertilizer_needed">No fertilizer needed</string>
    <string name="fertilizer_needed">Fertilizer needed</string>
    <string name="summary">Summary</string>
    <string name="notes">Notes</string>
    <string name="water">Water</string>
    <string name="repot">Repot</string>
    <string name="fertilize">Fertilize</string>
    <string name="next_watering_date">Next watering date</string>
    <string name="next_repotting_date">Next repotting date</string>
    <string name="next_fertilizing_date">Next fertilizing date</string>
    <string name="date_added">Date added</string>
    <string name="settings">Settings</string>
    <string name="late_by_90_days">Late by 90+ days</string>
    <string name="late_by_days">Late by %1$s days</string>
    <string name="today">Today</string>
    <string name="multiple_plants_require_attention">Multiple plants require attention!</string>
    <string name="requires_attention">%1$s requires attention!</string>
    <string name="enter_notes_here">Enter notes here...</string>
    <string name="account_settings">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="username">Username</string>
    <string name="edit">Edit %1$s</string>
    <string name="account_detail_not_set">%1$s not set</string>
    <string name="delete_account_confirmation">Sign in is required to delete your account. Continue?</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out?</string>
    <string name="confirm_text_form">Confirm %1$s</string>
    <string name="change_account_detail_header">Change %1$s?</string>
    <string name="account_info_mismatch">Both entries do not match</string>
    <string name="reset_password">Reset Password</string>
    <string name="a_reset_link_will_be_sent_to_your_email">A reset link will be sent to your email. Continue?</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="link_account">Link account</string>
    <string name="link_account_confirmation">To link your account, create an account to link to. Continue?</string>
    <string name="this_email_is_already_in_use">This email is already in use</string>
    <string name="delete_account_warning">Are you sure you want to delete your account?</string>
    <string name="delete_plant">Delete plant</string>
    <string name="late_by_1_day">Late by 1 day</string>
    <string name="no_more_plants_here_now">No more plants here now</string>
    <string name="you_have_no_notifications">You have no notifications</string>
    <string name="not_connected_to_network">Not connected to a network!</string>
    <string name="credential_does_not_match">Credential does not match!</string>
    <string name="error_not_a_valid_email">Error! Not a valid email!</string>
    <string name="email_change_requested">Email change requested</string>
    <string name="email_change_text">Send a change email request? Email change will occur after logging out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="repeat_how_often">Repeat how often?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="review_privacy_policy">review privacy policy</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="welcome_to_the_antheia_demo">Welcome to the Antheia Demo</string>
</resources>